[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/gui/windows/CollapsableWindow.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Collapse"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:HEIGHT")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Expand"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:HEIGHT")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.176471, 0.176471, 0.176471, 1 )

[sub_resource type="GDScript" id=5]
script/source = "extends Button

func _on_Button_toggled(button_pressed):
	if button_pressed:
		text = \"+\"
	else:
		text = \"-\""

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="CollapsableWindow" type="MarginContainer"]
margin_right = 800.0
margin_bottom = 600.0
focus_mode = 1
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Collapse = SubResource( 1 )
anims/Expand = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 800.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="TitleBar" type="PanelContainer" parent="VBoxContainer"]
margin_right = 800.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_styles/panel = SubResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleBar"]
margin_right = 800.0
margin_bottom = 30.0

[node name="Left" type="MarginContainer" parent="VBoxContainer/TitleBar/HBoxContainer"]
margin_right = 756.0
margin_bottom = 30.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Title" type="Label" parent="VBoxContainer/TitleBar/HBoxContainer/Left"]
margin_left = 5.0
margin_top = 8.0
margin_right = 751.0
margin_bottom = 22.0
text = "Title"

[node name="Right" type="MarginContainer" parent="VBoxContainer/TitleBar/HBoxContainer"]
margin_left = 760.0
margin_right = 800.0
margin_bottom = 30.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleBar/HBoxContainer/Right"]
margin_right = 40.0
margin_bottom = 30.0
grow_horizontal = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_constants/separation = 0

[node name="Button" type="Button" parent="VBoxContainer/TitleBar/HBoxContainer/Right/HBoxContainer"]
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
rect_clip_content = true
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_constants/hseparation = 0
toggle_mode = true
text = "-"
script = SubResource( 5 )

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 800.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )
[connection signal="mouse_entered" from="VBoxContainer/TitleBar" to="." method="_on_TitleBar_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/TitleBar" to="." method="_on_TitleBar_mouse_exited"]
[connection signal="toggled" from="VBoxContainer/TitleBar/HBoxContainer/Right/HBoxContainer/Button" to="." method="_on_Button_toggled"]
[connection signal="toggled" from="VBoxContainer/TitleBar/HBoxContainer/Right/HBoxContainer/Button" to="VBoxContainer/TitleBar/HBoxContainer/Right/HBoxContainer/Button" method="_on_Button_toggled"]
